--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@solana/web3.js": "^1.95.3",
-    "@sqds/multisig": "^2.1.3",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "aws-sdk": "^2.1302.0",
+    "dotenv": "^16.03"
   }
 }
